--- a/frontend/prontuario.html
+++ b/frontend/prontuario.html
@@ -1,3 +1,4 @@
+<!-- frontend/prontuario.html -->
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
@@ -161,7 +162,8 @@
               <span class="card-subtitle">Receitas médicas (mais recente no topo).</span>
             </div>
             <div style="display:flex; gap:.5rem; align-items:center; flex-wrap:wrap;">
-              <button id="btnCarregarReceitasPaciente" class="btn btn-secondary btn-sm" type="button">Carregar todas as receitas</button>
+              <!-- ✅ Texto ajustado para bater com o comportamento (10 últimas) -->
+              <button id="btnCarregarReceitasPaciente" class="btn btn-secondary btn-sm" type="button">Carregar 10 últimas</button>
               <button id="btnCarregarMaisReceitas" class="btn btn-secondary btn-sm" type="button" style="display:none;">Carregar mais</button>
             </div>
           </div>
